--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1630,15 +1630,12 @@ dialog
 .order__left__delivery
   display: flex
   gap: 1rem
+  margin-bottom: 4rem
 
   @media screen and (max-width: $tablet)
     flex-direction: column
 
 .order__left__delivery__option
-  display: flex
-  flex-direction: column
-  gap: 1rem
-  padding: 1.6rem
   width: 50%
   background-color: #fff
   border-radius: $radius
@@ -1647,17 +1644,36 @@ dialog
   @media screen and (max-width: $tablet)
     width: 100%
 
-.order__left__options__option__heading
+.order__left__delivery__option__label__input
+  display: none
+
+.order__left__delivery__option__label
+  display: block
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: column
+  gap: 1rem
+  padding: 1.6rem
+  background-color: #fff
+  border-radius: $radius
+  cursor: pointer
+
+.order__left__delivery__option__label:has(.order__left__delivery__option__label__input:checked)
+  background-color: $black
+  color: #fff
+
+.order__left__delivery__option__label__heading
   font-size: 1.6rem
   font-weight: 700
   line-height: 130%
 
-.order__left__options__option__info
+.order__left__delivery__option__label__info
   font-size: 1.4rem
   font-weight: 200
   line-height: 130%
 
-.order__left__options__option__select
+.order__left__delivery__option__label__select
   font-size: 1.3rem
   font-weight: 200
   line-height: 130%
@@ -1668,13 +1684,16 @@ dialog
   gap: 1rem
   flex-wrap: wrap
 
-.order__left__payment__option
+.order__left__payment__item__label
   background-color: #fff
   color: $black
+  
+.order__left__payment__input
+  display: none
 
-.order__left__payment__option--active
-  background-color: $black
-  color: #fff
+  &:checked + .order__left__payment__item__label
+    background-color: $black
+    color: #fff
 
 .order__left__promo
   display: flex
