--- a/sass/style.sass
+++ b/sass/style.sass
@@ -32,11 +32,11 @@ $orange: #FFAC4B
 html
   font-size: 62.5%
   scrollbar-gutter: stable
-  scrollbar-width: none
-  -ms-overflow-style: none
+  // scrollbar-width: none
+  // -ms-overflow-style: none
 
-  &::-webkit-scrollbar
-    display: none
+  // &::-webkit-scrollbar
+  //   display: none
 
 body
   display: flex
@@ -53,11 +53,11 @@ body
   color: $black
   background-color: $white
   scrollbar-gutter: stable
-  scrollbar-width: none
-  -ms-overflow-style: none
+  // scrollbar-width: none
+  // -ms-overflow-style: none
 
-  &::-webkit-scrollbar
-    display: none
+  // &::-webkit-scrollbar
+  //   display: none
 
   &:has(dialog[open])
     overflow: hidden
@@ -4859,4 +4859,128 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
-/*POPUP*/
+/* POPUP */
+
+/* MENU */
+.popup_menu
+  margin: 10.5rem auto 0
+  width: 100%
+  max-width: $desktop
+  background-color: $white
+  border-radius: $radius
+
+  @media screen and (max-width: $tablet)
+    margin: 0 auto
+    border-top-left-radius: 0
+    border-top-right-radius: 0
+    border-bottom-left-radius: $radius
+    border-bottom-right-radius: $radius
+
+.popup_menu__container
+  display: grid
+  grid-template-areas: "buttons tiles"
+  grid-template-columns: 28.4rem auto
+  gap: 2rem
+  width: 100%
+  padding: 2rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-areas: "buttons" "tiles"
+    grid-template-columns: 100%
+
+.popup_menu__container > .popup_menu__container__radio
+  display: none
+
+.popup_menu__container__navigation
+  grid-area: buttons
+  display: flex
+  flex-direction: column
+  gap: 1rem
+  width: 100%
+
+.popup_menu__container__navigation__item
+  width: 100%
+
+.popup_menu__container__navigation__item__label
+  width: 100%
+  padding: 1.4rem
+  text-align: left
+  cursor: pointer
+
+  &:hover
+    color: $white
+    background-color: $black
+
+#content__1:checked ~ .popup_menu__container__navigation .content__1 .popup_menu__container__navigation__item__label,
+#content__2:checked ~ .popup_menu__container__navigation .content__2 .popup_menu__container__navigation__item__label
+  color: #fff
+  background-color: $black
+  cursor: default
+
+.popup_menu__container__content
+  grid-area: tiles
+
+.popup_menu__container__content__list
+  display: none
+
+#content__1:checked ~ .popup_menu__container__content .content__1,
+#content__2:checked ~ .popup_menu__container__content .content__2
+  margin: 0 auto
+  display: flex
+  flex-wrap: wrap
+  gap: 1rem
+
+  @media screen and (max-width: $tablet)
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+
+.popup_menu__container__content__list__item
+  padding: 1.6rem
+  width: 19.2rem
+  background-color: $grey1
+  border-radius: $radius
+
+  &:hover
+    background-image: url('../images/main-tiles/tile-bg-hover.svg')
+    background-size: cover
+    color: $white
+
+  @media screen and (max-width: $tablet)
+    padding: 1.6rem 0.8rem
+    width: auto
+
+.popup_menu__container__content__list__item__link
+  display: grid
+  gap: 1rem
+  width: 100%
+  height: 100%
+
+  @media screen and (max-width: $tablet)
+    display: block
+
+  @media screen and (max-width: $tablet)
+    gap: 1rem
+
+.popup_menu__container__content__list__item__link__image
+  display: block
+
+  @media screen and (max-width: $tablet)
+    margin: auto
+
+.popup_menu__container__content__list__item__link__name
+  margin: auto
+  display: block
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  text-align: center
+
+  // @media screen and (max-width: $tablet)
+  //   padding-bottom: 1.6rem
+
+  // @media screen and (max-width: $tablet)
+  //   padding-bottom: 1.6rem
+
+
+/* MENU */
+
