Главная страница блога

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -396,6 +396,26 @@ dialog
   background-image: url(../images/icons/plus.svg)
   background-repeat: no-repeat
 
+.icon--tiles
+  background-image: url('../images/icons/tiles-black.svg')
+  background-repeat: no-repeat
+
+.icon--navigator
+  background-image: url('../images/icons/navigator-black.svg')
+  background-repeat: no-repeat
+  
+.icon--chat
+  background-image: url('../images/icons/chat-black.svg')
+  background-repeat: no-repeat
+  
+.icon--star
+  background-image: url('../images/icons/star-black.svg')
+  background-repeat: no-repeat
+  
+.icon--search
+  background-image: url('../images/icons/search-black.svg')
+  background-repeat: no-repeat
+
 .link--grey
   color: $grey1
   transition: 0.2s linear
@@ -4928,6 +4948,108 @@ dialog
   @media screen and (min-width: $tablet+1)
     grid-template-areas: "none tiles"
 
+#content__4:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__5:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__6:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__7:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__8:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__9:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__10:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__11:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__12:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__13:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__14:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__15:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__16:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__17:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__18:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__19:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
+#content__20:checked ~ .popup_menu__container__navigation
+  grid-template-areas: "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "none" "tiles"
+
+  @media screen and (min-width: $tablet+1)
+    grid-template-areas: "none tiles"
+
 .popup_menu__container__navigation__item
   width: 100%
 
@@ -5060,3 +5182,124 @@ dialog
 
 /* MENU */
 
+/* Блог */
+.blog_title
+  padding-top: 2rem
+  padding-bottom: 4rem
+
+  @media screen and (max-width: $tablet)
+    padding-top: 1rem
+    padding-bottom: 2rem
+
+.blog_categories
+  margin-bottom: 2rem
+
+.blog_categories__list
+  display: flex
+  flex-wrap: wrap
+  gap: .6rem
+
+.blog_categories__list__item
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  background-repeat: no-repeat
+  background-size: 1.6rem 1.6rem
+  background-position: top 50% right 1.6rem
+  border-radius: $radius
+  overflow: hidden
+  color: $black
+  background-color: #fff
+
+.blog_categories__list__item--inactive
+
+  &:hover
+    -webkit-filter: invert(100%)
+    filter: invert(100%)
+
+.blog_categories__list__item--active
+  -webkit-filter: invert(100%)
+  filter: invert(100%)
+
+.blog_categories__list__item__text
+  display: inline-block
+  padding: .4rem 1.6rem+.4rem+1.6rem .6rem 1.6rem
+
+.blog_categories__list__item__link
+  display: inline-block
+  padding: .4rem 1.6rem+.4rem+1.6rem .6rem 1.6rem
+
+.blog_feed
+  margin-bottom: 2rem
+
+.blog_feed__list
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
+  gap: 1.2rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
+.blog_feed__list__item
+  height: 26.8rem
+  border-radius: $radius
+  overflow: hidden
+
+.blog_feed__list__item__link
+  display: grid
+  grid-template-columns: auto 1.6rem
+  position: relative
+  padding: 2.4rem
+  width: 100%
+  height: 100%
+  color: #fff
+  background-image: linear-gradient(transparent, $black)
+
+  &:hover
+    color: $yellow
+
+  &:hover .icon--tiles
+    background-image: url('../images/icons/tiles-yellow.svg')
+
+  &:hover .icon--chat
+    background-image: url('../images/icons/chat-yellow.svg')
+
+  &:hover .icon--star
+    background-image: url('../images/icons/star-yellow.svg')
+
+  &:hover .icon--search
+    background-image: url('../images/icons/search-yellow.svg')
+
+  &:hover .icon--navigator
+    background-image: url('../images/icons/navigator-yellow.svg')
+
+.blog_feed__list__item__link__date
+  font-size: 1.2rem
+  font-weight: 400
+  line-height: 130%
+
+.blog_feed__list__item__link__icon
+  width: 1.6rem
+  height: 1.6rem
+  background-size: 100% 100%
+
+.blog_feed__list__item__link__title
+  grid-row: span 2
+  align-content: end
+  font-size: 2.8rem
+  font-weight: 700
+  line-height: 130%
+
+.blog_feed__list__item__link__image
+  object-fit: cover
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: -1
+
+// .blog__feed__navigation
+
+  
+/* Блог */
